fixed issue with center alignment of the icon

--- a/sites/all/themes/custom/ragno/css/style.css.less
+++ b/sites/all/themes/custom/ragno/css/style.css.less
@@ -571,14 +571,14 @@ div#primary{
         width: 320px;
       }
       ul{
-		margin: 0 0 0 12px;
+        margin: 0 0 0 12px;
         width: 320px;
         li{
           list-style: none;
           margin: 0;
           padding: 0;
-		  float: left;
-		  width: 50px;
+          float: left;
+          width: 50px;
           .icon{
             color: #FFF;
             float: left;
@@ -587,7 +587,7 @@ div#primary{
             text-align: center;
             text-transform: none !important;
             font-size: 75% !important;
-            width: 34px;
+            width: 47px;
             img{
               display: block;
               height: 31px;
